feat:Se corrigieron errores del codigo en JS, CSS Y HTML

--- a/formulario.html
+++ b/formulario.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
 <head>
@@ -8,33 +8,43 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./styles.css">
   <title>Formulario</title>
 </head>
+
 <body>
   <h1>Bienvenidos a mi fiesta</h1>
-  <h2>Por favor, confirmar asistencia:</h2>
+  <h2>Por favor, confirmar asistencia:</h2> 
 
-  <form class="formulario">
-    Nombre <input type="text" name="name" id="name">
-    <br />
-    Edad <input type="number" name="age" id="age">
+  <form class="formulario" action="#" method="post">
+  
+    <label for="name">Nombre</label>
+    <input type="text" name="name" id="name" required>
     <br />
 
-    Nacionalidad
-    <select name="nationality" id="nationality">
+    <label for="age">Edad</label>
+    <input type="number" name="age" id="age" min="0" required>
+    <br />
+
+    <label for="nationality">Nacionalidad</label>
+    <select name="nationality" id="nationality" required>
+      <option value="">-- Selecciona una opción --</option> 
       <option value="ar">Argentina</option>
       <option value="mx">Mexicana</option>
       <option value="per">Peruana</option>
       <option value="vnzl">Venezolana</option>
     </select>
     <br />
-    <input type="submit">
+
+    <input type="submit" value="Confirmar"> 
   </form>
 
   <div>
     <h2>Lista de invitados</h2>
-
   </div>
 
-  <script src="../formulario.js"></script>
+  <!--  Problema: La ruta del script puede ser incorrecta --> 
+  <!-- <script src="../formulario.js"></script> -->
+  <script src="formulario.js"></script>
+  
+
 </body>
 
 </html>
